[project]
name = "pyromod"
version = "1.0.0"
description = "A monkeypatcher add-on for Pyrogram that does conversation handling"
authors = [
    { name = "Khairul"}
]
dependencies = [
    "pyrotgfork"
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
